--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Assn0.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Assn0.data.br",
-        frameworkUrl: buildUrl + "/Assn0.framework.js.br",
-        codeUrl: buildUrl + "/Assn0.wasm.br",
+        dataUrl: buildUrl + "/Assn0.data",
+        frameworkUrl: buildUrl + "/Assn0.framework.js",
+        codeUrl: buildUrl + "/Assn0.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Template",
