--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Template</title>
+    <title>Unity WebGL Player | assn1</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Template</div>
+        <div id="unity-build-title">assn1</div>
       </div>
     </div>
     <script>
@@ -57,14 +57,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Assn0.loader.js";
+      var loaderUrl = buildUrl + "/Assn1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Assn0.data",
-        frameworkUrl: buildUrl + "/Assn0.framework.js",
-        codeUrl: buildUrl + "/Assn0.wasm",
+        dataUrl: buildUrl + "/Assn1.data",
+        frameworkUrl: buildUrl + "/Assn1.framework.js",
+        codeUrl: buildUrl + "/Assn1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Template",
+        productName: "assn1",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
